# nanoscribe

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  SPEC.md  compose.run.yml  doc-consistent.md  docker-compose.yml
.factory/: init.sh  services.yaml
TASKS/: funasr-plus-plan.md  whisper-squeak-integration-spec.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: export.py  jobs.py  library.py  memos.py  openai_compat.py  search.py  segments.py  speakers.py  system.py
backend/app/core/: config.py  dependencies.py  logging.py
backend/app/db/: __init__.py  __main__.py  migrate.py
backend/app/db/migrations/: 001_initial_schema.sql  002_fix_fts5_segment_triggers.sql  003_add_job_hotwords_diarization.sql  004_add_jobs_updated_at.sql  005_system_settings.sql
backend/app/schemas/: jobs.py  library.py  openai_compat.py  search.py  segments.py  speakers.py  system.py  upload.py
backend/app/services/: capabilities.py  diarization.py  diarization_merge.py  engine_config.py  export.py  jobs.py  library.py  local_transcription.py  normalization.py  persist.py  pipeline.py  protocols.py  remote_transcription.py  search.py  segments.py  segments_builder.py  speakers.py  sse.py  status.py  transcription.py  upload.py  worker.py
backend/tests/: test_db.py  test_diarization.py  test_export.py  test_jobs.py  test_library.py  test_normalization.py  test_reprocess.py  test_search.py  test_segments.py  test_speakers.py  test_system.py  test_transcription.py  test_upload.py
bot/: .env.example  Dockerfile  bot.py  requirements.txt  (+2 more)
(+100 files in other folders)
