[project]
name = "nanoscribe-backend"
version = "0.1.0"
description = "NanoScribe backend – FastAPI app for FunASR transcription"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "scipy>=1.10",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "ty>=0.0.1a1",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ty.environment]
python-version = "3.10"

[tool.ty.rules]
# Docker-only packages (funasr, torch, speakerlab, modelscope, soundfile, torchaudio)
# are not available in native CI — suppress import resolution errors globally.
unresolved-import = "ignore"
# Inline ty:ignore comments needed in Docker may be unused in native CI (where
# unresolved modules are treated as Unknown), so suppress the unused-warning.
unused-ignore-comment = "ignore"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks integration tests",
]
